--- a/Ansible/ansible_patroni/roles/patroni_install/templates/etcd.env.j2
+++ b/Ansible/ansible_patroni/roles/patroni_install/templates/etcd.env.j2
@@ -1,6 +1,6 @@
 
 #[Member]
-ETCD_ENABLE_V2=true
+#ETCD_ENABLE_V2=true
 ETCD_DATA_DIR="/var/lib/etcd"
 ETCD_LISTEN_PEER_URLS="http://127.0.0.1:2380,http://{{ ansible_default_ipv4.address }}:2380"
 ETCD_LISTEN_CLIENT_URLS="http://127.0.0.1:2379,http://{{ ansible_default_ipv4.address }}:2379"
@@ -14,5 +14,5 @@ ETCD_INITIAL_CLUSTER_TOKEN="etcd-cluster"
 
 ETCD_NAME="{{ inventory_hostname }}"
 {# ETCD_NAME="{{ inventory_host }}" #}
-ETCD_INITIAL_CLUSTER="{{ hostvars[groups['patroni-etcd'][0]]['inventory_hostname'] }}=http://{{ hostvars[groups['patroni-etcd'][0]]['ansible_host']['address'] }}:2380,{{ hostvars[groups['patroni-etcd'][1]]['inventory_hostname'] }}=http://{{ hostvars[groups['patroni-etcd'][1]]['ansible_host']['address'] }}:2380,{{ hostvars[groups['patroni-etcd'][2]]['inventory_hostname'] }}=http://{{ hostvars[groups['patroni-etcd'][2]]['ansible_default_ipv4']['ansible_host'] }}:2380"
+ETCD_INITIAL_CLUSTER="{% for host in groups['patroni-etcd'] %}{{hostvars[host]['inventory_hostname']}}=http://{{ hostvars[host]['ansible_host'] }}:2380{% if not loop.last %},{% endif %}{% endfor %}"
 ETCD_INITIAL_CLUSTER_STATE="new"
