--- a/Ansible/ansible_patroni/roles/patroni_install/templates/etcd.env.j2
+++ b/Ansible/ansible_patroni/roles/patroni_install/templates/etcd.env.j2
@@ -14,5 +14,5 @@ ETCD_INITIAL_CLUSTER_TOKEN="etcd-cluster"
 
 ETCD_NAME="{{ inventory_hostname }}"
 {# ETCD_NAME="{{ inventory_host }}" #}
-ETCD_INITIAL_CLUSTER="{% for host in groups['patroni-etcd'] %}{{hostvars[host]['inventory_hostname']}}=http://{{ hostvars[host]['ansible_host'] }}:2380{% if not loop.last %},{% endif %}{% endfor %}"
+ETCD_INITIAL_CLUSTER="{% for host in groups['patroni_etcd'] %}{{hostvars[host]['inventory_hostname']}}=http://{{ hostvars[host]['ansible_host'] }}:2380{% if not loop.last %},{% endif %}{% endfor %}"
 ETCD_INITIAL_CLUSTER_STATE="new"
